--- a/magazine/package.json
+++ b/magazine/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^2.7.10",
+    "vue-router": "^3.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -22,7 +23,8 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-vue": "^8.0.3",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "stylus": "^0.55.0",
+    "stylus-loader": "^6.1.0",
+    "vue-template-compiler": "2.7.10"  
   }
 }
